JDK22: Foreign Function & Memory API: Remove the aboslute path the the native library and use workspace/project relative paths in build and IDE