@@ -65,6 +65,15 @@ graalvmNative {
     }
 }
 
+val osName = System.getProperty("os.name").toLowerCase()
+
+val libPath = when {
+    osName.contains("win") -> "${projectDir}/../lib/tictactoe/target/debug"
+    osName.contains("mac") -> "${projectDir}/../lib/tictactoe/target/debug"
+    osName.contains("nux") -> "${projectDir}/../lib/tictactoe/target/debug"
+    else -> throw GradleException("Unsupported OS")
+}
+
 application {
     // Define the main class for the application.
     mainClass = "org.example.App"
@@ -84,7 +93,7 @@ tasks.run.configure {
 
 tasks.withType<Test>().all {
     systemProperty(
-        "java.library.path", "${projectDir}/lib/tictactoe/target/debug" 
+        "java.library.path", libPath 
     )
 
     // JDK22: Foreign Function Interface (FFI)
@@ -94,4 +103,24 @@ tasks.withType<Test>().all {
     // WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
     // WARNING: Restricted methods will be blocked in a future release unless native access is enabled
     jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+    environment("PATH", libPath) // For Windows
+    environment("LD_LIBRARY_PATH", libPath) // For Linux
+    environment("DYLD_LIBRARY_PATH", libPath) // For macOS
+}
+
+tasks.named<JavaExec>("run") {
+    systemProperty(
+        "java.library.path", libPath 
+    )
+
+    // JDK22: Foreign Function Interface (FFI)
+    // Resolves Warning:
+    // WARNING: A restricted method in java.lang.foreign.SymbolLookup has been called
+    // WARNING: java.lang.foreign.SymbolLookup::libraryLookup has been called by org.example.GameBoardNativeImpl in an unnamed module
+    // WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
+    // WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+    environment("PATH", libPath) // For Windows
+    environment("LD_LIBRARY_PATH", libPath) // For Linux
+    environment("DYLD_LIBRARY_PATH", libPath) // For macOS
 }
